# edermann

./: .gitignore  LICENCE.txt  Procfile  README.md  manage.py  requirements.txt  setup.cfg  setup.py.save  tox.ini
EDERMANN/: asgi.py  settings.py  urls.py  wsgi.py
EDERMANN.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
authentication/: urls.py  views.py
authentication/templates/: base.html
authentication/templates/accounts/: auth.html
booking/: admin.py  models.py  urls.py  views.py
booking/migrations/: 0001_initial.py  0002_auto_20211101_0940.py  0003_estate_about.py  0004_auto_20211101_1037.py
booking/templates/: footer.html  navbar.html
booking/templates/main/: block.html  booking.html  estate.html  floor.html  individual.html  landing.html  sketch.html  terms.html
payments/: urls.py  views.py
payments/templates/main/: payment.html
static/css/: auth.css  base.css  booking.css  estate.css  floor.css  main.css  payment.css  terms.css
static/js/: main.js
