[metadata]
name = EDERMANN
version = 1.2.0
description = A python django application for house booking
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/enockabere/edermann
author = Enock Abere
author_email = maebaenock95@gmail.com
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    Django>=3.2.12
    cryptography
    python-decouple
    requests
python_requires = >=3.6
include_package_data = True

[options.packages.find]
exclude =
    *.tests
    *.tests.*
    tests.*
    tests
